added search bar made homepage images

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<app-search></app-search>
+<h1>Top Artists</h1>
+<app-artist-list [list]="topArtists"></app-artist-list>
+<h1>Recently Played</h1>
+<app-artist-list [list]= "recentlyPlayed"></app-artist-list>
+<h1>Favorite Artists</h1>
+<app-artist-list [list]="favoriteArtists"></app-artist-list>
