--- a/src/app/artist-list/artist-list.component.html
+++ b/src/app/artist-list/artist-list.component.html
@@ -1,2 +1,2 @@
-<app-artist-card *ngFor = "let item of list.slice(0,3)" [mbid]= "item.mbid"></app-artist-card>
+<app-artist-card *ngFor = "let item of list.slice(0,3)" [name]= "item.name"></app-artist-card>
 
