artist page updates

--- a/src/app/result-entry/result-entry.component.html
+++ b/src/app/result-entry/result-entry.component.html
@@ -1,3 +1,6 @@
-<p>{{ artist.name }}</p>
-<p>{{ artist.listeners }}</p>
-<img src="{{ imgUrl }}" alt="" />
+<div (click)= "goToArtist(artist)">
+    <p>{{ artist.name }}</p>
+    <p>{{ artist.listeners }}</p>
+    <img src="{{ imgUrl }}" alt="" />
+</div>
+
