--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,1 +1,1 @@
-<app-result-list [list]="searchResults"></app-result-list>
+<app-result-entry *ngFor="let item of searchResults" [artist]="item" (artistClicked)="goToArtist($event)"></app-result-entry>
