--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,8 @@
+<app-header></app-header>
 <app-search></app-search>
 <h1>Top Artists</h1>
 <app-artist-list [list]="topArtists"></app-artist-list>
 <h1>Recently Played</h1>
-<app-artist-list [list]= "recentlyPlayed"></app-artist-list>
+<app-artist-list [list]="recentlyPlayed"></app-artist-list>
 <h1>Favorite Artists</h1>
 <app-artist-list [list]="favoriteArtists"></app-artist-list>
