--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,4 +1,12 @@
-<form #searchForm = "ngForm" (submit)="searchForArtist(searchForm)">
-    <input type="text" name = "artist" placeholder="Search for Artist" ngModel>
-    <button>Search</button>
+<form #searchForm="ngForm" (submit)="searchForArtist(searchForm)">
+  <div class="search-bar">
+    <input
+      class="search-input"
+      type="text"
+      name="artist"
+      placeholder="Search for Artist"
+      ngModel
+    />
+    <button class="search-button"><i class="fas fa-search"></i></button>
+  </div>
 </form>
