favorites feature added

--- a/src/app/artist-card/artist-card.component.html
+++ b/src/app/artist-card/artist-card.component.html
@@ -1,2 +1,2 @@
 <p>{{artistInfo.name}}</p>
-<img src="{{sampleImageUrl}}" alt="">
+<img src="{{sampleImageUrl}}" default="https://miro.medium.com/max/360/1*W35QUSvGpcLuxPo3SRTH4w.png" height ="174" width ="174" class = "img" alt="">
