--- a/src/app/result-entry/result-entry.component.html
+++ b/src/app/result-entry/result-entry.component.html
@@ -1,6 +1,6 @@
 <div (click)= "goToArtist(artist)">
     <p>{{ artist.name }}</p>
     <p>{{ artist.listeners }}</p>
-    <img src="{{ imgUrl }}" alt="" />
+    <img src="{{imgUrl}}" default="https://miro.medium.com/max/360/1*W35QUSvGpcLuxPo3SRTH4w.png" height ="174" width ="174" class = "img" alt="">
 </div>
 
