--- a/src/app/artist-card/artist-card.component.html
+++ b/src/app/artist-card/artist-card.component.html
@@ -1,2 +1,5 @@
-<p>{{artistInfo.name}}</p>
-<img src="{{sampleImageUrl}}" alt="">
+<div class="artist-card">
+  <img class="artist-img" src="{{ sampleImageUrl }}" alt="" />
+  <p class="artist-name">{{ artistInfo.name }}</p>
+  <button><i class="fas fa-plus-circle"></i></button>
+</div>
