--- a/src/app/artist-card/artist-card.component.html
+++ b/src/app/artist-card/artist-card.component.html
@@ -1,5 +1,9 @@
 <div class="artist-card">
-  <img class="artist-img" src="{{sampleImageUrl}}" default="https://miro.medium.com/max/360/1*W35QUSvGpcLuxPo3SRTH4w.png" height ="174" width ="174" class = "img" alt="">
+  <img
+    class="artist-img"
+    src="{{ sampleImageUrl }}"
+    default="https://miro.medium.com/max/360/1*W35QUSvGpcLuxPo3SRTH4w.png"
+  />
   <p class="artist-name">{{ artistInfo.name }}</p>
   <button><i class="fas fa-plus-circle"></i></button>
 </div>
