--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -2,7 +2,8 @@
 <app-header></app-header>
 <img src="{{imgUrl}}" default="https://miro.medium.com/max/360/1*W35QUSvGpcLuxPo3SRTH4w.png" height ="174" width ="174" class = "img" alt="">
 <h1>{{artistName}}</h1>
-<button (click)="toggleFavorites()">{{favoriteButtonText}}</button>
+
+<button><i [ngClass]="favoritesId ?'fas fa-minus-circle': 'fas fa-plus-circle'" (click)="toggleFavorites()"></i></button>
 <button (click)="getArtistVideos()">contact youtube api</button>
 <p>{{biography}}</p>
 
