--- a/src/app/favorites/favorites.component.html
+++ b/src/app/favorites/favorites.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
 <h1>Favorite Artists</h1>
-<app-artist-card *ngFor = "let item of favoritesList" [name]= "item.name"></app-artist-card>
+<app-artist-list class="artists" [list]="favoritesList"></app-artist-list>
 <h2>Favorite Videos</h2>
