--- a/src/app/artist-card/artist-card.component.html
+++ b/src/app/artist-card/artist-card.component.html
@@ -1,9 +1,11 @@
 <div class="artist-card">
-  <img
-    class="artist-img"
-    src="{{ sampleImageUrl }}"
-    default="https://miro.medium.com/max/360/1*W35QUSvGpcLuxPo3SRTH4w.png"
-  />
+    <div (click) = "goToArtist()">
+        <img
+        class="artist-img"
+        src="{{ sampleImageUrl }}"
+        default="https://miro.medium.com/max/360/1*W35QUSvGpcLuxPo3SRTH4w.png"
+      />
+    </div>
   <p class="artist-name">{{ artistInfo.name }}</p>
-  <button><i class="fas fa-plus-circle"></i></button>
+  <button><i [ngClass]="favoritesId ?'fas fa-minus-circle': 'fas fa-plus-circle'" (click)="toggleFavorites()"></i></button>
 </div>
