--- a/src/app/artist-list/artist-list.component.html
+++ b/src/app/artist-list/artist-list.component.html
@@ -1,5 +1,5 @@
 <div class="artists">
-  <app-artist-card
+  <app-artist-card (artistClicked)="goToArtist($event)"
     class="artist-card"
     *ngFor="let item of list.slice(0, 10)"
     [name]="item.name"
