--- a/src/app/favorites/favorites.component.html
+++ b/src/app/favorites/favorites.component.html
@@ -2,3 +2,4 @@
 <h1>Favorite Artists</h1>
 <app-artist-list class="artists" [list]="favoritesList"></app-artist-list>
 <h2>Favorite Videos</h2>
+<app-footer></app-footer>
