--- a/src/app/artist-card/artist-card.component.css
+++ b/src/app/artist-card/artist-card.component.css
@@ -11,31 +11,24 @@ button:focus {
   outline: none;
   border: none;
   background: transparent;
+  padding: 0;
+  margin: 0;
 }
 .artist-card {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.img-box {
   position: relative;
 }
 
-.fa-plus-circle {
-  color: white;
-  position: absolute;
-  bottom: 10vw;
-  right: 2vw;
-  opacity: 0.8;
-  -webkit-box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
-  box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
-  border-radius: 50%;
-}
-
+.fa-plus-circle,
 .fa-minus-circle {
   color: white;
   position: absolute;
-  bottom: 10vw;
-  right: 2vw;
+
   opacity: 0.8;
   -webkit-box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
@@ -43,7 +36,8 @@ button:focus {
   border-radius: 50%;
 }
 
-.fa-plus-circle:active {
+.fa-plus-circle:active,
+.fa-minus-circle:active {
   color: #00ff48;
 }
 
@@ -64,8 +58,11 @@ button:focus {
   margin: 2vw 0;
 }
 
-.fa-plus-circle {
+.fa-plus-circle,
+.fa-minus-circle {
   font-size: 6vw;
+  top: 20vw;
+  right: 1vw;
 }
 /* tablet view ____________________ */
 
