--- a/src/app/artist-card/artist-card.component.html
+++ b/src/app/artist-card/artist-card.component.html
@@ -1,11 +1,16 @@
 <div class="artist-card">
-    <div (click) = "goToArtist()">
-        <img
-        class="artist-img"
-        src="{{ sampleImageUrl }}"
-        default="https://miro.medium.com/max/360/1*W35QUSvGpcLuxPo3SRTH4w.png"
-      />
-    </div>
+  <div class="img-box" (click)="goToArtist()">
+    <img
+      class="artist-img"
+      src="{{ sampleImageUrl }}"
+      default="https://miro.medium.com/max/360/1*W35QUSvGpcLuxPo3SRTH4w.png"
+    />
+    <button>
+      <i
+        [ngClass]="favoritesId ? 'fas fa-minus-circle' : 'fas fa-plus-circle'"
+        (click)="toggleFavorites()"
+      ></i>
+    </button>
+  </div>
   <p class="artist-name">{{ artistInfo.name }}</p>
-  <button><i [ngClass]="favoritesId ?'fas fa-minus-circle': 'fas fa-plus-circle'" (click)="toggleFavorites()"></i></button>
 </div>
