--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -3,8 +3,7 @@ a:visited,
 a:active {
   text-decoration: none;
   color: white;
-  position: absolute;
-  bottom: 1vw;
-  left: 50%;
-  transform: translate(-50%);
+  text-align: center;
+  margin: 0 auto;
+  display: inline-block;
 }
