centered footer on mobile view

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -40,7 +40,8 @@ main {
 }
 
 .footer {
-  margin: 0 auto;
+  display: flex;
+  justify-content: center;
 }
 /* tablet view _____________________________ */
 
