--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,4 +12,6 @@
   <h1 class="headline">favorite artists</h1>
   <app-artist-list class="artists" [list]="favoriteArtists"></app-artist-list>
 </div>
-<app-footer class="footer"></app-footer>
+<div class="footer">
+  <app-footer></app-footer>
+</div>
