--- a/src/app/artist-card/artist-card.component.css
+++ b/src/app/artist-card/artist-card.component.css
@@ -1,8 +1,8 @@
 .artist-img {
   border-radius: 50%;
-  -webkit-box-shadow: 2px 2px 19px 9px rgba(255, 255, 255, 0.49);
-  -moz-box-shadow: 2px 2px 19px 9px rgba(255, 255, 255, 0.49);
-  box-shadow: 2px 2px 19px 9px rgba(255, 255, 255, 0.49);
+  -webkit-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
+  -moz-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
+  box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
   max-width: 100%;
 }
 
@@ -18,9 +18,6 @@ button:focus {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.img-box {
   position: relative;
 }
 
@@ -46,12 +43,13 @@ button:focus {
   word-wrap: break-word;
   hyphens: auto;
   text-align: center;
+  line-height: 12px;
 }
 
 /* mobile view ____________________ */
 
 .artist-card {
-  width: 25vw;
+  width: 26vw;
 }
 .artist-name {
   font-size: 3.5vw;
