added favorite videos list

--- a/src/app/favorites/favorites.component.html
+++ b/src/app/favorites/favorites.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <h1>Favorite Artists</h1>
-<app-artist-list class="artists" [list]="favoritesList"></app-artist-list>
+<app-artist-list class="artists" [list]="favoriteArtistsList"></app-artist-list>
 <h2>Favorite Videos</h2>
+<app-video-list [list]="favoriteVideosList"></app-video-list>
 <app-footer></app-footer>
