--- a/src/app/video-player/video-player.component.html
+++ b/src/app/video-player/video-player.component.html
@@ -7,4 +7,5 @@
   <button (click)="nextVideo()">Next Video</button>
   <button (click)="previousVideo()">Previous Video</button>
   <button (click)="getArtistVideos()">contact youtube api</button>
+  <button (click)="addVideoToFavorites()">favorite</button>
 </div>
