--- a/src/app/artist-list/artist-list.component.html
+++ b/src/app/artist-list/artist-list.component.html
@@ -6,11 +6,11 @@
     [name]="item.name"
   ></app-artist-card>
 </div>
-<div class="artists">
+<!-- <div class="artists">
   <app-artist-card
     (artistClicked)="goToArtist($event)"
     class="artist-card"
     *ngFor="let item of list.slice(0, 10)"
     [name]="item.name"
   ></app-artist-card>
-</div>
+</div> -->
